--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,18 +44,18 @@ set(DXC_PATH "C:/VulkanSDK/1.3.296.0/Bin/dxc")
 
 set(GLAD_INCLUDE_PATH "")
 if(WIN32)
-  find_package(Vulkan)
-  if(Vulkan_FOUND)
-    message(STATUS "Vulkan headers & loader found.")
-    set(NASHI_USE_VULKAN ON)
-    set(GLSLC_PATH "$ENV{VULKAN_SDK}/Bin/glslc.exe")
-    if(NOT EXISTS ${GLSLC_PATH})
-      message(FATAL_ERROR "glslc.exe not found at ${GLSLC_PATH}. Please check Vulkan SDK installation.")
-    endif()
-  else()
-    message(WARNING "Vulkan loader NOT found. Disabling Vulkan support.")
-    set(NASHI_USE_VULKAN OFF)
-  endif()
+  # find_package(Vulkan)
+  # if(Vulkan_FOUND)
+  #   message(STATUS "Vulkan headers & loader found.")
+  #   set(NASHI_USE_VULKAN ON)
+  #   set(GLSLC_PATH "$ENV{VULKAN_SDK}/Bin/glslc.exe")
+  #   if(NOT EXISTS ${GLSLC_PATH})
+  #     message(FATAL_ERROR "glslc.exe not found at ${GLSLC_PATH}. Please check Vulkan SDK installation.")
+  #   endif()
+  # else()
+  #   message(WARNING "Vulkan loader NOT found. Disabling Vulkan support.")
+  #   set(NASHI_USE_VULKAN OFF)
+  # endif()
 
 
   # find_package(OpenGL REQUIRED)
@@ -66,7 +66,7 @@ if(WIN32)
   # set(GLAD_INCLUDE_PATH "${NASHI_ROOT}/vendor/glad/include")
   # message(STATUS "Glad include path: ${NASHI_ROOT}/vendor/glad/include")
   
-  # set(NASHI_USE_DIRECT3D12 ON)
+  set(NASHI_USE_DIRECT3D12 ON)
 endif()
 
 # Handle Release flags and definitions for multi-config and single-config
@@ -282,5 +282,3 @@ if(NOT MSVC)
     endif()
   endif()
 endif()
-
-
